--- a/src/main/webapp/WEB-INF/views/jsp/index.html
+++ b/src/main/webapp/WEB-INF/views/jsp/index.html
@@ -5,6 +5,9 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
           crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 <body style="background-color: ghostwhite">
 <div class="container">
@@ -20,7 +23,8 @@
                     <a class="p-0 pt-1 px-2 text-decoration-none links" href="#">Link 1</a>
                     <a class="p-0 pt-1 px-2 text-decoration-none links" href="#">Link 2</a>
                     <a class="p-0 pt-1 px-2 text-decoration-none links" href="#">Link 3</a>
-                    <form method="post" class="p-0 m-0 ml-auto" action="${pageContext.request.contextPath}/settings/logout">
+                    <form method="post" class="p-0 m-0 ml-auto"
+                          action="${pageContext.request.contextPath}/settings/logout">
                         <button type="submit" class="btn btn-sm btn-light text-primary">Log Out</button>
                     </form>
                 </div>
@@ -31,12 +35,33 @@
         <div class="col-sm-4">
             <div class="card border-0" style="background-color: ghostwhite">
                 <a href="#">
-                    <img class="card-img-top rounded-lg" src="../../../resources/img/img_avatar_man.png"
-                         alt="Card image">
+                    <img class="card-img-top" src="../../../resources/img/img_avatar_man.png"
+                         alt="Card image" style="border-radius: 0.5rem 0.5rem 0 0;">
                 </a>
-                <div class="card-body">
-                    <h4 class="card-title">${employee.firstName} ${employee.lastName}</h4>
-                    <p class="card-text">Some example text some example text. John Doe is an architect and engineer</p>
+                <div class="card-body p-0">
+                    <div class="w-100 bg-primary text-center text-white pointer p-1"
+                         style="font-family: 'Segoe UI'; font-size: 1.25rem">Yaroslav Tretiakov
+                    </div>
+                    <button type="button" class="btn btn-block btn-sm btn-primary mt-0" data-toggle="modal"
+                            data-target="#changeAvatar" style="border-radius: 0 0 0.5rem 0.5rem;">
+                        Cange Profile Picture
+                    </button>
+                    <div class="modal" id="changeAvatar">
+                        <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Profile Picture</h4>
+                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                </div>
+                                <div class="modal-body">
+                                    Modal body..
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -74,6 +99,10 @@
     .links:hover {
         color: white;
         font-weight: bolder;
+    }
+
+    .segoeui {
+        font-family: "Segoe UI", Arial, sans-serif;
     }
 </style>
 </html>
