--- a/src/main/webapp/WEB-INF/views/jsp/index.html
+++ b/src/main/webapp/WEB-INF/views/jsp/index.html
@@ -11,11 +11,12 @@
 </head>
 <body style="background-color: ghostwhite">
 <div class="container">
-    <nav class="navbar navbar-expand-sm p-1"
+    <nav class="navbar navbar-expand-sm p-0"
          style="border-bottom-left-radius: 0.5rem; border-bottom-right-radius: 0.5rem; background: linear-gradient(to bottom, #1448b4, #4d7acd);">
         <div class="row align-items-center w-100">
             <div class="col-sm-2">
-                <a href="#" class="navbar-brand text-white ml-3 font-weight-light"
+                <a href="#"
+                   class="navbar-brand text-white ml-3 font-weight-light"
                    style="font-size: 1.5rem; font-family: 'Segoe UI', sans-serif">Unigraph</a>
             </div>
             <div class="col-sm pr-1">
@@ -24,23 +25,23 @@
                     <a class="p-0 pt-1 px-2 text-decoration-none links" href="#">Link 2</a>
                     <a class="p-0 pt-1 px-2 text-decoration-none links" href="#">Link 3</a>
                     <form method="post" class="p-0 m-0 ml-auto"
-                          action="${pageContext.request.contextPath}/settings/logout">
-                        <button type="submit" class="btn btn-sm btn-light text-primary">Log Out</button>
+                          action="#">
+                        <button type="submit" class="btn btn-sm text-white">Log Out</button>
                     </form>
                 </div>
             </div>
         </div>
     </nav>
-    <div class="row">
-        <div class="col-sm-4">
+    <div class="row mw-100 p-0 m-0 justify-content-between">
+        <div class="col-sm-3 p-0">
             <div class="card border-0" style="background-color: ghostwhite">
-                <a href="#">
-                    <img class="card-img-top" src="../../../resources/img/img_avatar_man.png"
+                <div class="p-0 m-0 mh-100 mw-100">
+                    <img class="card-img-top p-0 m-0" src="../../../resources/img/img_avatar_man.png"
                          alt="Card image" style="border-radius: 0.5rem 0.5rem 0 0;">
-                </a>
+                </div>
                 <div class="card-body p-0">
                     <div class="w-100 bg-primary text-center text-white pointer p-1"
-                         style="font-family: 'Segoe UI'; font-size: 1.25rem">Yaroslav Tretiakov
+                         style="font-family: 'Segoe UI', sans-serif; font-size: 1.25rem">Yaroslav Tretiakov
                     </div>
                     <button type="button" class="btn btn-block btn-sm btn-primary mt-0" data-toggle="modal"
                             data-target="#changeAvatar" style="border-radius: 0 0 0.5rem 0.5rem;">
@@ -54,21 +55,24 @@
                                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                                 </div>
                                 <div class="modal-body">
-                                    <form class="form">
+                                    <form method="post" enctype="multipart/form-data"
+                                          action="#">
                                         <div class="row m-0">
                                             <div class="col-9 pr-0">
                                                 <div class="custom-file">
-                                                    <input type="file" class="custom-file-input" id="customFile">
-                                                    <label class="custom-file-label" for="customFile">Choose file</label>
+                                                    <input type="file" class="custom-file-input" name="customFile"
+                                                           id="customFile" accept="image/jpeg,image/png">
+                                                    <label class="custom-file-label" for="customFile">Choose
+                                                        file</label>
                                                 </div>
                                             </div>
                                             <div class="col pl-4 pr-0">
-                                                <input type="button" class="btn btn-primary" value="Upload">
+                                                <input type="submit" class="btn btn-primary" value="Upload">
                                             </div>
                                         </div>
                                     </form>
                                     <script>
-                                        $(".custom-file-input").on("change", function() {
+                                        $(".custom-file-input").on("change", function () {
                                             var fileName = $(this).val().split("\\").pop();
                                             $(this).siblings(".custom-file-label").addClass("selected").html(fileName);
                                         });
@@ -80,32 +84,39 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-8">
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Dec 7, 2017</h5>
-            <div class="fakeimg">Fake Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco.</p>
-            <br>
-            <h2>TITLE HEADING</h2>
-            <h5>Title description, Sep 2, 2017</h5>
-            <div class="fakeimg">Fake Image</div>
-            <p>Some text..</p>
-            <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod
-                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                ullamco.</p>
+        <div class="col-sm-9 p-0">
+            <div class="card" style="border-radius: 0 0.5rem 0.5rem 0">
+                <div class="card-header pl-3 pb-0">
+                    <h5>Yaroslav Tretiakov</h5>
+                </div>
+                <div class="card-body p-0">
+                    <table class="table table-striped table-hover m-0 pl-5">
+                        <tbody>
+                        <tr>
+                            <td>University</td>
+                            <td>Kharkiv National University of Radioelectronics</td>
+                        </tr>
+                        <tr>
+                            <td>Faculty</td>
+                            <td>Computer engineering</td>
+                        </tr>
+                        <tr>
+                            <td>Cathedra</td>
+                            <td>Electronic computing</td>
+                        </tr>
+                        <tr>
+                            <td>Group</td>
+                            <td>KI-15-3</td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
 </body>
 <style>
-    .fakeimg {
-        height: 200px;
-        background-color: #aaa;
-    }
-
     .links {
         color: #ffffff;
         font-size: 1rem;
@@ -114,10 +125,6 @@
     .links:hover {
         color: white;
         font-weight: bolder;
-    }
-
-    .segoeui {
-        font-family: "Segoe UI", Arial, sans-serif;
     }
 </style>
 </html>
